[metadata]
name = tourbillon_pytorch
version = 0.0.1
author = Patrick Ramos, Ryan Ramos
author_email = patrickjcor@gmail.com, ryanccor@gmail.com
description = Unofficial implementation of "Tourbillon: a Physically Plausible Neural Architecture"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ramos-Ramos/tourbillon-pytorch
project_urls =
    Bug Tracker = https://github.com/Ramos-Ramos/tourbillon-pytorch/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    einops
    numpy
    torch

[options.packages.find]
where = src